[package]
name = "rs-sasl"
version = "0.2.0"
description = "A SASL library written in Rust."

edition = "2021"
license = "MIT"
authors = ["Nick Westendorf"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"